pom cleanup; trying a different place for the WAR file