@@ -23,7 +23,7 @@
         <jena.version>2.13.0</jena.version>
         <exec-maven-version>1.3.2</exec-maven-version>
         <!-- /end managed versions -->
-        <jvm.args>-Xms256m -Xmx3072m -XX:PermSize=128m -XX:MaxPermSize=512m</jvm.args>
+        <jvm.args>-Xms256m -Xmx3072m</jvm.args>
         <generated.schema.dir>target/generated/db</generated.schema.dir>
         <generated.schema.file>schema.sql</generated.schema.file>
         <wro4j.version>1.7.7</wro4j.version>
@@ -2041,7 +2041,7 @@
                 <!-- For even more secret passwords, encrypt them: http://maven.apache.org/guides/mini/guide-encryption.html -->
                 <application.password>tdardev.crowdpw</application.password>
                 <the.jdbc.password>tdar</the.jdbc.password>
-                <webapp.deploy.dir>/opt/webapps/tdar</webapp.deploy.dir>
+                <webapp.deploy.dir>target/</webapp.deploy.dir>
             </properties>
             <dependencies>
                 <dependency>
